# email-spam-filter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conda-lock.yml  environment.yml  pyproject.toml  user_config.yml
.github/workflows/: check.yml
data/labels/: .gitignore
scripts/: fetch_imap_inbox.py  label_inbox.py  organise_external_data.py  parse_emails.py  test_ml_model.py
src/email_spam_filter/: __init__.py  setup.py
src/email_spam_filter/analysis/: __init__.py  functions.py
src/email_spam_filter/common/: __init__.py  constants.py  containers.py  functions.py  paths.py
src/email_spam_filter/data/: __init__.py
src/email_spam_filter/data/collection/: __init__.py
src/email_spam_filter/data/collection/personal/: __init__.py  functions.py
src/email_spam_filter/data/io/: __init__.py  functions.py
src/email_spam_filter/data/labelling/: __init__.py  functions.py
src/email_spam_filter/data/organise/: __init__.py
src/email_spam_filter/data/organise/spamassassin/: __init__.py  functions.py
src/email_spam_filter/data/organise/trec/: __init__.py  functions.py
src/email_spam_filter/ml/: __init__.py  models.py
src/email_spam_filter/ml/common/: __init__.py  containers.py  functions.py
src/email_spam_filter/ml/logistic_regression/: __init__.py  functions.py  model.py
tests/: test_placeholder.py
tests/analysis/: test_functions.py
tests/common/: test_functions.py
tests/data/: example_email.eml
tests/data/collection/personal/: test_functions.py
tests/data/io/: test_functions.py
tests/data/labelling/: test_functions.py
tests/data/organise/spamassassin/: test_functions.py
tests/data/organise/trec/: test_functions.py
tests/ml/common/: test_functions.py
tests/ml/logistic_regression/: test_functions.py
